# yanglabkit

./: .gitignore  AGENTS.md  PRIVACY.md  README.md
.claude-plugin/: marketplace.json  plugin.json
tasks/: README.md
tasks/public-data-figure-comparison/: .gitignore  README.md  RUBRIC.md  build_comparison.py  build_showcase.py  prepare_inputs.py  pyproject.toml  task.json  validate_submission.py
tasks/public-data-figure-comparison/data/: README.md  gistemp-zonal-rolling.csv  manifest.json  palmer-penguins-body-mass.csv  uci-auto-mpg.csv  uci-red-wine-correlations.csv  usgs-2025-reviewed-m5.csv  world-bank-urbanization-2024.csv
tasks/public-data-figure-comparison/submission-template/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submission-template/figures/: README.md
tasks/public-data-figure-comparison/submission-template/source/: README.md
tasks/public-data-figure-comparison/submissions/: README.md
tasks/public-data-figure-comparison/submissions/claude_code_fable-5_noskill/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submissions/claude_code_opus-4-8_noskill/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submissions/claude_code_opus-4-8_yanglabkit/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submissions/codex_gpt-5-5_noskill/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submissions/codex_gpt-5-6-sol_noskill/: NOTES.md  submission.json
tasks/public-data-figure-comparison/submissions/codex_gpt-5-6-sol_yanglabkit/: NOTES.md  submission.json
(+21 files in other folders)
